manifests/jupyter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter
  namespace: thetrains
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      containers:
      - name: jupyter
        image: jupyter/datascience-notebook:lab-2.0.1
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: jupyter
          mountPath: /home/jovyan/work
      volumes:
        - name: jupyter
          persistentVolumeClaim:
            claimName: jupyter-pvc
