manifests/jupyter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  namespace: thetrains
  labels:
    app: jupyter
spec:
  selector:
    app: jupyter
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
