manifests/jupyter/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter
  namespace: thetrains
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Can comment this out for no certificates
spec:
  tls:
  - hosts:
    - jupyter.thetrains.co.uk
    secretName: jupyter-tls
  rules:
  - host: jupyter.thetrains.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: jupyter
          servicePort: 80
